after pulling the master version to the new eclipse version and didn't test yet
not all fixed conflict state